Fix T101065: wrong denoising depth after ray precision improvements